corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
@form-text-indent: 20px;

.form-container {
  background-color: white;
  .box-shadow(0 0 10px 2px rgba(0,0,0,.1));
  margin-bottom: 2rem;
  margin-top: 20px;
  font-size: 16px;

  .page-header {
    padding-bottom: 30px;

    h1 {
      padding-left: @form-text-indent - 5px;
    }
  }

  .loading {
    right: 20px;
  }
  .controls {
    padding-right: 25px;
    padding-top: 3px;
  }
  .form-actions {
    margin-top: 30px;
    background-color: lighten(@cc-brand-hi, 10);
    .border-bottom-radius(0);
  }

  .form-group {
    padding-left: 25px;
    padding-right: 20px;
  }

  .panel-body {
    padding-left: @form-text-indent + 5px;
    padding-right: @form-text-indent + 5px;
  }

  .gr-header {
    .collapsible-icon-container {
      float: left;
      margin-right: 10px;
    }

    legend {
      padding-left: @form-text-indent + 3px;
    }
  }

}

.form-container .form-actions .btn {
  font-size: 20px;
  padding: 13px 24px;
  .transition(all .5s);
}

.form-group-required-label {
  display: none;
}

.form-single-question {
  padding-bottom: 20px;
  padding-top: 20px;

  .page-header {
    display: none;
  }

  .form-group.required {
    .transition(all .5s);
    margin-bottom: 0;
    label:before {
      display: none;
    }
  }

  .form-group.required.on {
    background-color: @cc-att-neg-hi;
    border: 10px solid @cc-att-neg-mid;
    border-bottom: none;
    padding-top: 10px;
    padding-bottom: 10px;

    label {
      margin-left: 0;
      margin-right: 0;
    }
  }

  .form-group-required-label {
    display: block;
    opacity: 0;
    .transition(all .5s);
  }

  .form-group-required-label.on {
    opacity: 100;
    font-size: 1.6rem;
    background-color: @cc-att-neg-mid;
    color: white;
    width: auto;
    line-height: 14px;
    margin-left: -10px;
    margin-right: -10px;
    padding: 10px 10px 11px;
    text-align: left;
    margin-top: 0;
    border: none;
  }

}


.question-container .gr .children {
  .info.panel-default {
    border: none;
    background-color: transparent;
    .box-shadow(none);

    .panel-body {
      padding-top: 6px;
    }
  }
}

